--- a/hwbl8/index.html
+++ b/hwbl8/index.html
@@ -27,7 +27,8 @@
             
             Капсула доставила драгоценный груз — горстку пыли, собранной с астероида Бенну. Этот космический объект размером с гору может помочь нам найти ответ на самый важный вопрос: откуда мы взялись?
             
-            «Когда на Землю будут доставлены 250 г астероида Бенну, мы сможем изучить материал, который существовал до появления нашей планеты. А некоторые его крупицы, возможно, появились даже еще до нашей Солнечной системы», — говорит профессор Данте Лауретта, главный исследователь миссии.   
+            «Когда на Землю будут доставлены 250 г астероида Бенну, мы сможем изучить материал, который существовал до появления нашей планеты. А некоторые его крупицы, возможно, появились даже еще до нашей Солнечной системы», — говорит профессор Данте Лауретта, главный исследователь миссии. 
+            Бенну — 500-метровый околоземный астероид спектрального класса В, входит в группу углеродистых астероидов. Он также классифицируется как достаточно рыхлое тело типа «куча щебня» и ранее был признан потенциально опасным для нашей планеты.  
             <br><br>
             <img src="https://ichef.bbci.co.uk/ace/ws/800/cpsprodpb/592e/live/10f46fc0-58af-11ee-a99b-a507f388630d.jpg" width="60%" alt = "Астероид Бенну" title="Миссия по сбору фрагментов Бенну">
             <p id="imgtext">
